# docs

./: 404.html  LICENSE  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
about/: index.html
blog/: index.html
blog/2024/01/31/hello-world/: index.html
blog/archive/2024/: index.html
docs/: about.md  faq.md  index.md
docs/blog/: .authors.yml  index.md
docs/blog/posts/: another-post.md  hello-world.md
docs/install/: README.md
docs/stylesheets/: extra.css
faq/: index.html
install/: index.html
search/: search_index.json
